--- a/catkin_ws/noetic/src/wros_tutorials/package.xml
+++ b/catkin_ws/noetic/src/wros_tutorials/package.xml
@@ -3,7 +3,7 @@
   <name>wros_tutorials</name>
   <version>0.0.0</version>
   <description>An example of ROS Noetic package with WRS.</description>
-  <maintainer email="taku8926@gmail.com">takuya-ki</maintainer>
+  <maintainer email="taku8926@gmail.com">Takuya Kiyokawa</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
@@ -12,6 +12,4 @@
   <depend>std_srvs</depend>
   <depend>geometry_msgs</depend>
   <depend>tf</depend>
-  <depend>moveit_core</depend>
-  <depend>moveit_ros_planning_interface</depend>
 </package>
