--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "catkin_ws/noetic/src/wros_tutorials/modules/wrs"]
 	path = catkin_ws/noetic/src/wros_tutorials/modules/wrs
-	url = git@github.com:wanweiwei07/wrs.git
-	ignore = dirty
+	url = git@github.com:takuya-ki/wrs.git
