fix a bug and add planning parameter files

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,4 +48,8 @@ RUN pip install -r /tmp/requirements.txt
 WORKDIR /catkin_ws/src/
 RUN echo "catkin build -DPYTHON_EXECUTABLE=/usr/bin/python3" >> ~/.bash_history
 RUN echo "rosservice call /plan_grasp" >> ~/.bash_history
-RUN echo "roslaunch wros_tutorials plan_grasp.launch" >> ~/.bash_history
+RUN echo "roslaunch wros_tutorials plan_grasp.launch config:=planner_params_sgb30_example.yaml" >> ~/.bash_history
+RUN echo "roslaunch wros_tutorials plan_grasp.launch config:=planner_params_suction_example.yaml" >> ~/.bash_history
+RUN echo "roslaunch wros_tutorials plan_grasp.launch config:=planner_params_robotiq140_example.yaml" >> ~/.bash_history
+RUN echo "roslaunch wros_tutorials plan_grasp.launch config:=planner_params_robotiq85_example.yaml" >> ~/.bash_history
+RUN echo "roslaunch wros_tutorials plan_grasp.launch config:=planner_params_robotiqhe_example.yaml" >> ~/.bash_history
