--- a/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq85_example.yaml
+++ b/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq85_example.yaml
@@ -2,7 +2,7 @@ object_mesh_path: '/catkin_ws/src/wros_tutorials/wrs/0000_examples/objects/bunny
 gripper_name: 'robotiq85'
 antipodal_grasp:
   angle_between_contact_normals: 90
-  openning_direction: 'loc_x' 
+  openning_direction: 'loc_y' 
   max_samples: 4
   min_dist_between_sampled_contact_points: .016
   contact_offset: .016 
