--- a/catkin_ws/noetic/src/wros_tutorials/config/planner_params_suction_single_example.yaml
+++ b/catkin_ws/noetic/src/wros_tutorials/config/planner_params_suction_single_example.yaml
@@ -1,5 +1,6 @@
 object_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/sandpart2.stl'
 gripper_name: 'suction'
+save_results: False
 contact:
     torque_resistance: 100
     min_distance: .1
