--- a/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiqhe_obstcl_example.yaml
+++ b/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiqhe_obstcl_example.yaml
@@ -1,6 +1,7 @@
 object_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/tubebig.stl'
 obstcl_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/table.stl'
 vis_failures: False
+save_results: False
 gripper_name: 'robotiqhe'
 antipodal_grasp:
     angle_between_contact_normals: 90
