--- a/catkin_ws/noetic/src/wros_tutorials/config/planner_params_suction_obstcl_example.yaml
+++ b/catkin_ws/noetic/src/wros_tutorials/config/planner_params_suction_obstcl_example.yaml
@@ -1,6 +1,7 @@
 object_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/sandpart2.stl'
 obstcl_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/table.stl'
 vis_failures: False
+save_results: False
 gripper_name: 'suction'
 contact:
     torque_resistance: 100
