enabled grasp planning for an object on a table

--- a/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq140_single_example.yaml
+++ b/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq140_single_example.yaml
@@ -1,4 +1,5 @@
 object_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/milkcarton.stl'
+obstcl_mesh_path: ''
 gripper_name: 'robotiq140'
 save_results: False
 antipodal_grasp:
