--- a/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq85_single_example.yaml
+++ b/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq85_single_example.yaml
@@ -1,4 +1,5 @@
 object_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/bunnysim.stl'
+obstcl_mesh_path: ''
 gripper_name: 'robotiq85'
 save_results: False
 antipodal_grasp:
