--- a/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq140_obstcl_example.yaml
+++ b/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq140_obstcl_example.yaml
@@ -1,6 +1,6 @@
 object_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/milkcarton.stl'
 obstcl_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/table.stl'
-vis_failures: False
+vis_failures: True
 save_results: False
 gripper_name: 'robotiq140'
 antipodal_grasp:
