--- a/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq85_single_example.yaml
+++ b/catkin_ws/noetic/src/wros_tutorials/config/planner_params_robotiq85_single_example.yaml
@@ -1,7 +1,7 @@
 object_mesh_path: '/catkin_ws/src/wros_tutorials/meshes/bunnysim.stl'
 obstcl_mesh_path: ''
 gripper_name: 'robotiq85'
-save_results: False
+save_results: True
 antipodal_grasp:
     angle_between_contact_normals: 90
     openning_direction: 'loc_y' 
